# aibot

./: .dockerignore  build-and-test.sh  color-Pallet.md  message_central.md
AIBot/: .env.example  .gitignore  Dockerfile  README.md  WINDSURF_INSTRUCTIONS.md  api_collection.json  app.db  auth_token.py  debug_import.py  init_db.py  migrate_add_file_fields.py  migrate_channel_members.py  migrate_db.py  pyproject.toml  quick_test.sh  seed_data.py  setup.py  simple_test.py  test_imports.py  test_key.py  test_otp.py  test_sms.py  test_with_uv.py  websocket_test_client.html
AIBot/scripts/: migrate_add_username.py  migrate_remove_username.py  requirements.txt  seed_config.py  seed_data.py  seed_local.py  seed_production.py  test_signup.py
AIBot/src/: main.py
AIBot/src/backend/: seed_router.py
AIBot/src/backend/ai_service/: ai_providers.py  channel_models.py  channel_router.py  channel_service.py  chat_agent.py  chat_service.py  models.py  router.py  schemas.py  services.py
AIBot/src/backend/auth/: authentication_service.py  models.py  otp_service.py  router.py  schemas.py  services.py  tenant_config.py  user_management.py  websocket_auth.py
AIBot/src/backend/channels/: __init__.py  channel_models.py  channel_router.py  channel_schemas.py  channel_service.py  models.py  router.py  schemas.py  service.py
AIBot/src/backend/core/: config.py  security.py  settings.py
AIBot/src/backend/shared/: database.py  database_manager.py  db_context.py  email.py  email_service.py  file_upload_service.py
AIBot/tenant_databases/: acme_corp.db  hippocampus.db  tech_startup.db
(+80 files in other folders)
